test/parser/Queries/syntax_errors/fail_K-ForExprPositionalVar-10.xq
 ne (:**** eq ** eq *********** let **** ne * let ** ne ** ne ************* ne ************:) let 
(: Test: K-ForExprPositionalVar-10                    eq   where    :)
(:Written by: Frans Englich                       ne      let   where :)
(: Date: eq  2006-10-05T18:29:37+02:00             foo  where        :)
(: Purpose: Verify that the position is properly computed for fn:string-to-codepoints).  ne :)
 $ (:** let *** for * $  ne ***************foo***** for * eq ******* let * $ ***** eq ******** for *** ne ****:)
deep-equal((1, 2, 3), for $i at $p in distinct-values((1, 2, 3, 1, 2)) return p)